fix to hide page-title on mobile.

--- a/src/styles/layouts/page.scss
+++ b/src/styles/layouts/page.scss
@@ -348,7 +348,9 @@ h3:first-child,
 .category-blog iframe {
   border: none !important;
 }
-
+.page-title {
+  display: none;
+}
 .page-title h1 {
   text-decoration: none;
   color: black;
