--- a/src/styles/legacy.scss
+++ b/src/styles/legacy.scss
@@ -1,7 +1,3 @@
-.page-title {
-  display: none;
-}
-
 .category-primary .page-title {
   display: none;
 }
